fixed overlapping button

--- a/CSS/stylesheet_index.css
+++ b/CSS/stylesheet_index.css
@@ -36,7 +36,7 @@ body {
     transition: all 0.5s;
     cursor: pointer;
     position: absolute;
-    top: 53%;
+    top: 63%;
     left: 45%;
 }
 
